--- a/dubai-apartments.html
+++ b/dubai-apartments.html
@@ -6,6 +6,7 @@
     <title>شقق دبي - خدمات السيارات في المجمعات السكنية | 0561309910</title>
     <meta name="description" content="خدمات السيارات المتخصصة في شقق ومجمعات دبي السكنية. صيانة، ونش، غسيل سيارات في موقعك. خدمة منازل وشقق دبي">
     <meta name="keywords" content="شقق دبي, خدمات السيارات المنازل, صيانة سيارات المنزل, ونش الشقق دبي, غسيل سيارات الشقق, مجمعات دبي السكنية">
+    <meta name="google-site-verification" content="dsc8b6htf-6C2kIZvYD6XormjVfEFmTzbAJv7_SBlQ0" />
     <link rel="canonical" href="https://car-services-uae.com/dubai-apartments.html">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
