--- a/dubai-winch.html
+++ b/dubai-winch.html
@@ -6,6 +6,7 @@
     <title>ونش دبي - خدمات الونش والطوارئ في دبي | 0561309910</title>
     <meta name="description" content="خدمات ونش دبي المتخصصة على مدار الساعة. ونش سيارات، نقل مركبات، خدمات طوارئ في جميع مناطق دبي. اتصل الآن 0561309910">
     <meta name="keywords" content="ونش دبي, ونش سيارات دبي, نقل سيارات دبي, خدمات طوارئ دبي, ونش بر دبي, ونش ديرة, ونش مارينا دبي, ونش جميرا">
+    <meta name="google-site-verification" content="dsc8b6htf-6C2kIZvYD6XormjVfEFmTzbAJv7_SBlQ0" />
     <link rel="canonical" href="https://car-services-uae.com/dubai-winch.html">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
